--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
@@ -42,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^26.6.0"
   }
 }
